--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -654,7 +654,8 @@
           <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
-    
+<!-- amazon javascript sdk cdn file -->
+<script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.24.min.js"></script>
     
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="lib/jquery-3.2.1.min.js"></script>
