--- a/src/main/resources/static/resources/pages/propertyDetails.html
+++ b/src/main/resources/static/resources/pages/propertyDetails.html
@@ -5,12 +5,12 @@
       <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Home</a></li>
           <li class="breadcrumb-item"><a href="#">Property for sale</a></li>
-          <li class="breadcrumb-item active" aria-current="page">{{propDetails.property_name}}</li>
+          <li class="breadcrumb-item active" aria-current="page">{{propDetails.propertyMetaData.propertyName}}</li>
         </ol>
       <div class="page-header bordered">
         <div class="row">
           <div class="col-md-10"> <a href="#" class="btn-return" title="Back"><i class="fa fa-angle-left"></i></a>
-            <h1>{{propDetails.property_name}} ({{propDetails.business_type}}) <small><i class="fa fa-map-marker"></i> {{propDetails.property_address}} {{propDetails.city}} {{propDetails.state}}</small></h1>
+            <h1>{{propDetails.propertyMetaData.propertyName}} ({{propDetails.propertyMetaData.businessType}}) <small><i class="fa fa-map-marker"></i> {{propDetails.propertyMetaData.propertyAddress}} {{propDetails.propertyMetaData.city}} {{propDetails.propertyMetaData.state}}</small></h1>
           </div>
           <div class="col-md-2">
             <div class="btn-group btn-group-justified" role="group">
@@ -122,7 +122,7 @@
                     <div class="row">
                       <div class="col-md-4 col-lg-4 col-xl-4">
                         <h6>Lot Size</h6>
-                        <span style="text-align: center;">{{propDetails.lot_size}}</span>
+                        <span style="text-align: center;">{{propDetails.lotSize}}</span>
                       </div>
                       <div class="col-md-4 col-lg-4 col-xl-4">
                         <h6>Brand</h6>
