--- a/src/main/resources/static/resources/pages/propertyDetails.html
+++ b/src/main/resources/static/resources/pages/propertyDetails.html
@@ -104,7 +104,7 @@
                 <div ng-if="imageArray.length === 0">
                   <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                     <a href="img1" itemprop="contentUrl" data-size="2000x1414">
-                      <img src="{{propDetails.imageUrl}}" class="img-fluid swiper-lazy" style="height:450px; width:610px;" alt="Drawing Room">
+                      <img src="{{propDetails.propertyMetaData.imageUrl}}" class="img-fluid swiper-lazy" style="height:450px; width:610px;" alt="Drawing Room">
                     </a>
                   </figure>
                 </div>
