--- a/src/main/resources/static/resources/pages/addListingForms/coinLaundryForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/coinLaundryForm.html
@@ -84,12 +84,12 @@
         </div>
     </div>
 
-    <!--Machine Details-->
+    <!--Equipment Details-->
     <div class="col-md-6 col-lg-6 col-xl-6">
-        <div ng-click="hideMachineDetails = ! hideMachineDetails">
-            <label ng-class="{'details-not-expanded': hideMachineDetails, 'details-expanded': !hideMachineDetails}" >Machine Details</label>
-            <img ng-show="!hideMachineDetails" ng-src="../../img/icon/downArrow.png" style="float: right"/>
-            <img ng-show="hideMachineDetails" ng-src="../../img/icon/upArrow.png" style="float: right"/>
+        <div ng-click="hideEquipmentDetails = ! hideEquipmentDetails">
+            <label ng-class="{'details-not-expanded': hideEquipmentDetails, 'details-expanded': !hideEquipmentDetails}" >Equipment Details</label>
+            <img ng-show="!hideEquipmentDetails" ng-src="../../img/icon/downArrow.png" style="float: right"/>
+            <img ng-show="hideEquipmentDetails" ng-src="../../img/icon/upArrow.png" style="float: right"/>
         </div>
         <div ng-show="!hideMachineDetails">
             <div class="row">
