--- a/src/main/resources/static/resources/pages/addListingForms/gasStationForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/gasStationForm.html
@@ -74,138 +74,130 @@
             </div>
         </div>
     </div>
-
     <div class="col-md-6 col-lg-6 col-xl-6">
-        <div class="form-group">
-            <label>Convenient Store</label>
-            <div class="radio radio-inline">
-                <input type="radio" id="convenientStore" ng-model="property.gas.convenientStore" value="Yes">
-                <label for="convenientStore">Yes</label>
-            </div>
-            <div class="radio radio-inline">
-                <input type="radio" id="noConvenientStore" ng-model="property.gas.convenientStore" value="No">
-                <label for="noConvenientStore">No</label>
-            </div>
-        </div>
-
-        <div class="row" ng-show="property.gas.convenientStore == 'Yes'">
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>Convenient Store Brand</label>
-                <input type="text" class="form-control form-control-md" placeholder="" ng-model="property.gas.storeBrand">
+        <div class="row">
+            <div class="col-md-12 col-lg-12 col-xl-12">
+                <label>Convenient Store</label>
+                <div class="radio radio-inline">
+                    <input type="radio" id="convenientStore" ng-model="property.gas.convenientStore" value="Yes">
+                    <label for="convenientStore">Yes</label>
+                </div>
+                <div class="radio radio-inline">
+                    <input type="radio" id="noConvenientStore" ng-model="property.gas.convenientStore" value="No">
+                    <label for="noConvenientStore">No</label>
+                </div>
             </div>
 
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>Store Inventory Cost</label>
-                <input type="text" class="form-control form-control-md" placeholder="$" ng-model="property.gas.storeApproxInventoryCost">
-            </div>
-        </div>
-    </div>
+            <div class="row col-md-12 col-lg-12 col-xl-12" ng-show="property.gas.convenientStore == 'Yes'">
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Convenient Store Brand</label>
+                    <input type="text" class="form-control form-control-md" placeholder="" ng-model="property.gas.storeBrand">
+                </div>
 
-    <div class="col-md-6 col-lg-6 col-xl-6">
-        <div class="form-group">
-            <label>Car Wash</label>
-            <div class="radio radio-inline">
-                <input type="radio" id="carWash" ng-model="property.gas.carWash" value="Yes">
-                <label for="carWash">Yes</label>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Store Inventory Cost</label>
+                    <input type="text" class="form-control form-control-md" placeholder="$" ng-model="property.gas.storeApproxInventoryCost">
+                </div>
             </div>
-            <div class="radio radio-inline">
-                <input type="radio" id="noCarWash" ng-model="property.gas.carWash" value="No">
-                <label for="noCarWash">No</label>
+
+            <div class="col-md-12 col-lg-12 col-xl-12">
+                <label>Car Wash</label>
+                <div class="radio radio-inline">
+                    <input type="radio" id="carWash" ng-model="property.gas.carWash" value="Yes">
+                    <label for="carWash">Yes</label>
+                </div>
+                <div class="radio radio-inline">
+                    <input type="radio" id="noCarWash" ng-model="property.gas.carWash" value="No">
+                    <label for="noCarWash">No</label>
+                </div>
             </div>
-        </div>
-        <div class="row" ng-show="property.gas.carWash == 'Yes'">
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
+            <div class="form-group col-md-6 col-lg-6 col-xl-6" ng-show="property.gas.carWash == 'Yes'">
                 <label>Car Wash Equipment Cost</label>
                 <input type="text" class="form-control form-control-md" placeholder="$" ng-model="property.gas.carWashEquipCost">
             </div>
-        </div>
-    </div>
 
-    <div class="col-md-6 col-lg-6 col-xl-6">
-        <div class="form-group">
-            <label>Auto Repair & Maintenance Shop</label>
-            <div class="radio radio-inline">
-                <input type="radio" id="autoRepairShop" ng-model="property.gas.autoSupplyRepairMaintShop" value="Yes">
-                <label for="autoRepairShop">Yes</label>
+            <div class="col-md-12 col-lg-12 col-xl-12">
+                <label>Auto Repair & Maintenance Shop</label>
+                <div class="radio radio-inline">
+                    <input type="radio" id="autoRepairShop" ng-model="property.gas.autoSupplyRepairMaintShop" value="Yes">
+                    <label for="autoRepairShop">Yes</label>
+                </div>
+                <div class="radio radio-inline">
+                    <input type="radio" id="noAutoRepairShop" ng-model="property.gas.autoSupplyRepairMaintShop" value="No">
+                    <label for="noAutoRepairShop">No</label>
+                </div>
             </div>
-            <div class="radio radio-inline">
-                <input type="radio" id="noAutoRepairShop" ng-model="property.gas.autoSupplyRepairMaintShop" value="No">
-                <label for="noAutoRepairShop">No</label>
-            </div>
-        </div>
-        <div class="row" ng-show="property.gas.autoSupplyRepairMaintShop == 'Yes'">
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
+            <div class="form-group col-md-6 col-lg-6 col-xl-6" ng-show="property.gas.autoSupplyRepairMaintShop == 'Yes'">
                 <label>Approx Cost</label>
                 <input type="text" class="form-control form-control-md" placeholder="$" ng-model="property.gas.autoSupplyRepairMaintShopCost">
             </div>
-        </div>
-    </div>
 
-    <div class="form-group col-md-6 col-lg-6 col-xl-6">
-            <label>ATM</label>
-            <div class="radio radio-inline">
-                <input type="radio" id="atm" ng-model="property.gas.atm" value="Yes">
-                <label for="atm">Yes</label>
+            <div class="col-md-12 col-lg-12 col-xl-12">
+                <label>ATM</label>
+                <div class="radio radio-inline">
+                    <input type="radio" id="atm" ng-model="property.gas.atm" value="Yes">
+                    <label for="atm">Yes</label>
+                </div>
+                <div class="radio radio-inline">
+                    <input type="radio" id="noAtm" ng-model="property.gas.atm" value="No">
+                    <label for="noAtm">No</label>
+                </div>
             </div>
-            <div class="radio radio-inline">
-                <input type="radio" id="noAtm" ng-model="property.gas.atm" value="No">
-                <label for="noAtm">No</label>
-            </div>
-    </div>
 
-    <div class="col-md-6 col-lg-6 col-xl-6">
-        <div class="form-group">
-            <label>Food Court</label>
-            <div class="radio radio-inline">
-                <input type="radio" id="foodCourt" ng-model="property.gas.foodCourt" value="Yes">
-                <label for="foodCourt">Yes</label>
+            <div class="col-md-12 col-lg-12 col-xl-12">
+                <label>Food Court</label>
+                <div class="radio radio-inline">
+                    <input type="radio" id="foodCourt" ng-model="property.gas.foodCourt" value="Yes">
+                    <label for="foodCourt">Yes</label>
+                </div>
+                <div class="radio radio-inline">
+                    <input type="radio" id="noFoodCourt" ng-model="property.gas.foodCourt" value="No">
+                    <label for="noFoodCourt">No</label>
+                </div>
             </div>
-            <div class="radio radio-inline">
-                <input type="radio" id="noFoodCourt" ng-model="property.gas.foodCourt" value="No">
-                <label for="noFoodCourt">No</label>
-            </div>
-        </div>
-        <div class="row" ng-show="property.gas.foodCourt == 'Yes'">
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>Food Court Cost</label>
-                <input type="text" class="form-control form-control-md" placeholder="$" ng-model="property.gas.foodCourtCost">
-            </div>
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>Food Court Capacity</label>
-                <input type="text" class="form-control form-control-md" placeholder="" ng-model="property.gas.foodCourtSeatingCapacity">
+            <div class="row col-md-12 col-lg-12 col-xl-12" ng-show="property.gas.foodCourt == 'Yes'">
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Food Court Cost</label>
+                    <input type="text" class="form-control form-control-md" placeholder="$" ng-model="property.gas.foodCourtCost">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Food Court Capacity</label>
+                    <input type="text" class="form-control form-control-md" placeholder="" ng-model="property.gas.foodCourtSeatingCapacity">
+                </div>
             </div>
         </div>
     </div>
 
     <!--Expenses-->
-    <div ng-click="hideExpenses = ! hideExpenses">
-        <label ng-class="{'details-not-expanded': hideExpenses, 'details-expanded': !hideExpenses}" >Expense Details</label>
-        <img ng-show="!hideExpenses" ng-src="../../img/icon/downArrow.png" style="float: right"/>
-        <img ng-show="hideExpenses" ng-src="../../img/icon/upArrow.png" style="float: right"/>
-    </div>
-    <div ng-show="!hideExpenses">
-        <div class="row">
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>Rent</label>
-                <input type="text" class="form-control form-control-md" ng-model="property.gas.rent"
-                       name="rent" id="rent" placeholder="">
-            </div>
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>NNN</label>
-                <input type="text" class="form-control form-control-md" ng-model="property.gas.nnn"
-                       name="nnn" id="nnn" placeholder="">
-            </div>
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>Garbage</label>
-                <input type="text" class="form-control form-control-md" ng-model="property.gas.garbage"
-                       name="garbage" id="garbage" placeholder="">
-            </div>
-            <div class="form-group col-md-6 col-lg-6 col-xl-6">
-                <label>Utilities</label>
-                <input type="text" class="form-control form-control-md" ng-model="property.gas.utilities"
-                       name="utilities" id="utilities" placeholder="">
+    <div class="col-md-6 col-lg-6 col-xl-6">
+        <div ng-click="hideExpenses = ! hideExpenses">
+            <label ng-class="{'details-not-expanded': hideExpenses, 'details-expanded': !hideExpenses}" >Expense Details</label>
+            <img ng-show="!hideExpenses" ng-src="../../img/icon/downArrow.png" style="float: right"/>
+            <img ng-show="hideExpenses" ng-src="../../img/icon/upArrow.png" style="float: right"/>
+        </div>
+        <div ng-show="!hideExpenses">
+            <div class="row">
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Rent</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.gas.rent"
+                           name="rent" id="rent" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>NNN</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.gas.nnn"
+                           name="nnn" id="nnn" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Garbage</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.gas.garbage"
+                           name="garbage" id="garbage" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Utilities</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.gas.utilities"
+                           name="utilities" id="utilities" placeholder="">
+                </div>
             </div>
         </div>
     </div>
-
 </div>
