--- a/src/main/resources/static/resources/pages/addListingForms/liquorStoreForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/liquorStoreForm.html
@@ -12,17 +12,17 @@
             <div class="row">
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Drinks Cabinets</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.liquorStoreInterior.numberOfDrinksCabinets"
+                    <input type="text" class="form-control form-control-md" ng-model="property.liquorStore.numberOfDrinksCabinets"
                            name="numberOfDrinksCabinets" id="numberOfDrinksCabinets" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Goods Cabinets</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.liquorStoreInterior.numberOfGoodsCabinets"
+                    <input type="text" class="form-control form-control-md" ng-model="property.liquorStore.numberOfGoodsCabinets"
                            name="numberOfGoodsCabinets" id="numberOfGoodsCabinets" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of vending Machines</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.liquorStoreInterior.numberOfVendingMachines"
+                    <input type="text" class="form-control form-control-md" ng-model="property.liquorStore.numberOfVendingMachines"
                            name="numberOfVendingMachines" id="numberOfVendingMachines" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
@@ -38,11 +38,11 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>ATM Machine</label><br/>
                     <div class="radio radio-inline">
-                        <input type="radio" id="atm" ng-model="property.atm" value="Yes">
+                        <input type="radio" id="atm" ng-model="property.liquorStore.atm" value="Yes">
                         <label for="atm">Yes</label>
                     </div>
                     <div class="radio radio-inline">
-                        <input type="radio" id="noAtm" ng-model="property.atm" value="No">
+                        <input type="radio" id="noAtm" ng-model="property.liquorStore.atm" value="No">
                         <label for="noAtm">No</label>
                     </div>
                 </div>
